# DEStiny

./: .gitignore  DEStiny.code-workspace  README.md  docker-compose.yml
.github/workflows/: deploy.yml  nextjs.yml
src/backend/: .cursorrules  .gitignore  AGENTS.md  Dockerfile  README.md  asgi.py  pyproject.toml  urls.py  wsgi.py
src/backend/agent/: __init__.py  agent.py  prompts.py  storage.py  tools.py
src/backend/settings/: settings.py  test_settings.py
src/backend/simulation/: api.py  apps.py  schemas.py
src/backend/simulation/api/: api.py  blueprint.py  chat.py  simulation.py
src/backend/simulation/models/: base.py
src/backend/src/destiny/agv/: location.py  planning.py
src/backend/src/destiny/core/: simulation_container.py  snapshot.py
src/backend/tests/: test_agv.py  test_api.py  test_environment.py  test_prompts.py  test_simulation_container.py  test_tools.py
src/backend/tests/utils/: test_environment.py
src/backend/utils/: environment.py
src/engine/: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/engine/.cursor/rules/: running-code.md
src/engine/src/destiny/agv/: agv.py  fleet_manager.py  items.py  site_graph.py  store_location.py
src/engine/src/destiny/core/: environment.py  rendering.py  simulation_container.py  simulation_entity.py  timeline.py
src/engine/src/destiny/examples/: agv_moving_a_box.py  bank_renege.py  grid_fleet_simulation.py
src/engine/src/destiny_sim/agv/: agv.py
src/engine/src/destiny_sim/builder/: entity.py  runner.py  schema.py
src/engine/src/destiny_sim/builder/entities/: human.py
src/engine/src/destiny_sim/builder/entities/material_flow/: buffer.py  control.py  manufacturing_cell.py  sink.py  source.py
src/engine/src/destiny_sim/core/: environment.py  metrics.py  rendering.py  timeline.py
src/engine/src/dxm/agv/: agv.py  fleet_manager.py  items.py  planning.py  site_graph.py  store_location.py
src/engine/src/dxm/core/: environment.py  simulation_entity.py
src/engine/src/examples/: agv_moving_a_box.py  bank_renege.py  grid_fleet_simulation.py  simple_walk.py
src/engine/src/tests/: test_agv.py  test_builder_entity.py  test_builder_runner.py  test_environment.py  test_fleet_manager.py  test_grid_site_graph.py  test_location.py  test_material_flow.py  test_metrics_recording.py  test_progress_recording.py  test_simulation_entity.py  test_site_graph.py  test_store_location.py
src/engine/tests/: test_agv.py  test_environment.py  test_fleet_manager.py  test_grid_site_graph.py  test_simulation_container.py  test_simulation_entity.py  test_site_graph.py  test_store_location.py
src/frontend/: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  bun.lockb  eslint.config.mjs  index.html  next.config.ts  package.json  pico.save  tsconfig.json
src/frontend/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
src/frontend/components/ai-elements/: artifact.tsx  canvas.tsx  chain-of-thought.tsx  checkpoint.tsx  code-block.tsx  confirmation.tsx  context.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  model-selector.tsx  node.tsx  open-in-chat.tsx  panel.tsx  plan.tsx  prompt-input.tsx  queue.tsx  reasoning.tsx  shimmer.tsx  tool.tsx  web-preview.tsx
src/frontend/components/common/: ConfigureSelect.tsx  SidePanel.tsx  logo.tsx
src/frontend/components/ui/: alert.tsx  carousel.tsx  chart.tsx  input-group.tsx  menubar.tsx  resizable.tsx  select.tsx  tabs.tsx  tooltip.tsx
src/frontend/config/: api.ts
src/frontend/context/: AppModeContext.tsx  AppStateContext.tsx
src/frontend/features/builder/: builderSchemas.ts  index.ts  types.ts  utils.test.ts  utils.ts
src/frontend/features/editor/: index.ts
src/frontend/features/metrics/: index.ts  types.ts  utils.test.ts  utils.ts
src/frontend/features/playback/: PlaybackClock.ts  constants.ts  index.ts  types.ts  utils.ts
src/frontend/hooks/: AppModeContext.tsx  AppStateContext.tsx  ThemeProvider.tsx  useFileUpload.ts  useQueryClient.ts
src/frontend/lib/: api-client.ts  utils.ts
src/frontend/src/: App.tsx
src/frontend/types/: api.d.ts  api.ts
(+138 files in other folders)
