[project]
name = "destiny"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "rustworkx>=0.17.1",
    "simpy>=4.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
