[project]
name = "destiny"
version = "0.1.0"
description = "Simpy based simulation engine with a visualization layer."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "DEStiny Team", email = "filip@deusxmachina.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "rustworkx>=0.17.1",
    "simpy>=4.1.1",
]

[project.urls]
Homepage = "https://github.com/deusXmachina-dev/DEStiny/tree/main/src/engine"
Repository = "https://github.com/deusXmachina-dev/DEStiny/tree/main/src/engine"
Issues = "https://github.com/deusXmachina-dev/DEStiny/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
